More fixes for word wrapping.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 	word-break: keep-all;
-	overflow-wrap: normal;
+	overflow-wrap: break-word;
 }
 
 article, aside, details, figcaption, figure,
